# SaaS-Django

./: .gitignore  Dockerfile  docker-compose.yml  paracord_runner.sh  prueba.py  pyproject.toml  requirements.txt
src/: db.sqlite3  manage.py  paracord_runner.sh  start.sh
src/SaaS_Project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/auth/: views.py
src/commando/management/commands/: vendor_pull.py
src/helpers/: __init__.py  downloader.py
src/profiles/: urls.py  views.py
src/subscriptions/: admin.py  models.py
src/subscriptions/management/commands/: sync_subs.py
src/subscriptions/migrations/: 0001_initial.py  0002_alter_subscriptions_options.py  0003_subscriptions_groups.py  0004_subscriptions_permissions.py  0005_alter_subscriptions_permissions.py  0006_alter_subscriptions_permissions.py  0007_subscriptions_active.py  0008_usersubscription.py
src/templates/: base.html  home.html
src/templates/auth/: login.html  register.html
src/templates/base/: css.html  js.html
src/templates/nav/: navbar.html
src/templates/profiles/: detail.html  list.html
src/templates/snippets/: welcome-user-msg.html
src/visits/: models.py
src/visits/migrations/: 0001_initial.py
