[project]
name = "SaaS-Django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "requests>=2.32.4",
    "whitenoise>=6.9.0",
]